objects/ffct__RecordMigration__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>The records that need to be migrated to another organization</description>
    <fields>
        <fullName>ffct__ChangedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RecordMigration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__Id__c</fullName>
        <description>Holds the Id of the record to be migrated</description>
        <label>Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__IsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__MigrationSet__c</fullName>
        <description>Holds the associated Migration Set</description>
        <label>Migration Set</label>
        <referenceTo>ffct__MigrationSet__c</referenceTo>
        <relationshipLabel>Record Migration</relationshipLabel>
        <relationshipName>RecordMigration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__NamespacePrefix__c</fullName>
        <description>Holds the namespace prefix of the object whose record needs to be migrated</description>
        <label>Namespace Prefix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Object__c</fullName>
        <description>Holds the API name of the object whose records needs to be migrated</description>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Migration</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <columns>NAME</columns>
        <columns>ffct__Object__c</columns>
        <columns>ffct__NamespacePrefix__c</columns>
        <columns>ffct__IsUpdate__c</columns>
        <columns>ffct__Id__c</columns>
        <columns>ffct__MigrationSet__c</columns>
        <columns>ffct__ChangedById__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Migration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>